major code refactor
* use promise for ssh connections
* added basic trigger device flows (untested)
* use signal only for mobile cards (no triggers)

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
   "extends": "athom",
-  'new-cap': { newIsCap: false },
+  "rules": {
+  	"no-unneeded-ternary": "off",
+  	"radix": "off"
+  }
 }
